syntax = "proto3";
package zetachain.zetacore.observer;

import "gogoproto/gogo.proto";

option go_package = "github.com/zeta-chain/node/x/observer/types";

message ChainNonces {
  string creator = 1;

  // deprecated(v19): index has been replaced by chain_id for unique identifier
  string index = 2 [ deprecated = true ];

  int64 chain_id = 3;
  uint64 nonce = 4;
  repeated string signers = 5;
  uint64 finalizedHeight = 6;
}
